Fix spacing on block below Post content (#215)
* fixes PLANET-1654

--- a/src/scss/pages/post/_article-content.scss
+++ b/src/scss/pages/post/_article-content.scss
@@ -1,5 +1,6 @@
 .post-content {
   color: $dark-shade-black;
+  margin-bottom: 55px;
 
   .cover-card {
     width: auto;
