--- a/src/scss/pages/post/_author-block.scss
+++ b/src/scss/pages/post/_author-block.scss
@@ -1,5 +1,5 @@
 .author-block {
-  margin: 55px 0;
+  margin-bottom: 55px;
   overflow: hidden;
 
   @include medium-and-up {
